# dotfiles

./: .gitignore  .gitmodules  README.md  Xmodmap  add_install  ansible.cfg  arch-pacstrap.sh  astylerc  backup_exclude  bash_aliases  bashrc  colors.sh  dump_facts.yaml  gdbinit  gitconfig  gitprompt.sh  hosts  i3config  i3status  install  install.yaml  install_base.yaml  install_desktop.yaml  install_dotfiles.sh  install_home.yaml  install_server.yaml  install_system.yaml  install_tom-lan.yaml  install_user.yaml  post-clone.sh  run_role.sh  themerc  tmp.yaml  tom-lan.yml  vimrc  yamllint.yml
.github/workflows/: ci.yml  main.yml
config/Code/User/: settings.json
config/nvim/: base.vim  cmake.vim  coc-settings.json  coc.vim  colors.vim  cpp.vim  format.vim  init.vim  keys.vim  lua.vim  openterm.vim  python.vim  rust.vim
config/nvim/lua/: cmakefindtargets.lua  tools.lua
config/nvim/snips/: cpp.snippets  markdown.snippets
config/nvim/spell/: en.utf-8.add  en.utf-8.add.spl
config/termite/: config  onedark  onelight
doc/: nvim_keys.md
files/: Xdefaults  bash_aliases  bashrc  clang-format  gdbinit  restic_exclude
files/config/nvim/: .netrwhist  init.vim
files/config/termite/: config
files/i3/: config  i3blocks.config  i3status.config  polybar.ini
files/scripts/: backup  clean_backup  clear_cache  close_port.sh  colors  gen_password  gitautoversion.sh  group_access  listports  mountiso  mountsmb  open_port.sh  plotter  projects  socks_twhps  starwars  to_csv  vdev
files/services/: pwiki.service
group_vars/server/: vars.yml
host_vars/localhost/: vars.yml
os/: 00_arch-pre-install.sh  01_arch-part-gpt-enc.sh  01_arch-part-gpt.sh  02_arch-lvm-enc.sh  com.sh  fix-boot.sh  full-enc.sh  full.sh  install.sh  install_encrypted.sh
roles/alacritty/files/: alacritty.toml
roles/alacritty/meta/: main.yaml
roles/alacritty/tasks/: main.yaml
roles/ansible/tasks/: main.yaml
roles/ansible/vars/: main.yaml
roles/arduino/tasks/: main.yaml
roles/backup_client/files/: backup  backup.service  failure-handler@.service  restic_exclude
roles/backup_client/meta/: main.yaml
roles/backup_client/tasks/: main.yaml
roles/backup_client/vars/: main.yaml
roles/backup_server/files/: clean_backups  clean_backups.service  clean_backups.timer  clean_backups@.service  clean_backups@.timer  clean_host_backups
roles/backup_server/meta/: main.yaml
roles/backup_server/tasks/: main.yaml
roles/backup_server_add_user_key/defaults/: main.yml
roles/backup_server_add_user_key/tasks/: main.yaml
roles/bash/tasks/: main.yaml
roles/bash_aliases/meta/: main.yaml
roles/bash_aliases/tasks/: main.yaml
roles/bash_case_insensitive/tasks/: man.yaml
roles/bash_config/files/: bash_aliases  bashrc
roles/bash_config/meta/: main.yaml
roles/bash_config/tasks/: main.yaml
roles/bashrc/tasks/: main.yaml
roles/blender/meta/: main.yaml
roles/blender/tasks/: main.yaml
roles/bluetooth/tasks/: main.yaml
roles/ddns/defaults/: main.yaml
roles/ddns/files/: ddclient.conf
roles/ddns/meta/: main.yaml
roles/ddns/tasks/: main.yaml
roles/ddns/templates/: ddclient.conf
roles/desktop/tasks/: main.yaml
roles/desktop/vars/: main.yaml
roles/desktop_apps/meta/: main.yaml
roles/desktop_apps/tasks/: main.yaml
roles/desktop_apps/vars/: main.yaml
roles/desktop_config/meta/: main.yaml
roles/desktop_config/tasks/: main.yaml
roles/docker/tasks/: main.yaml
roles/docker/vars/: main.yaml
roles/fonts/tasks/: main.yaml
roles/fonts/vars/: main.yaml
roles/git/files/: gitconfig
roles/git/tasks/: main.yaml
roles/gitprompt/files/: gitprompt.sh
roles/gitprompt/meta/: main.yaml
roles/gitprompt/tasks/: main.yaml
roles/go/tasks/: main.yaml
roles/go/vars/: main.yaml
roles/i3/tasks/: main.yaml
roles/install_apt_repo/defaults/: main.yaml
roles/install_apt_repo/meta/: argument_specs.yaml
roles/install_apt_repo/tasks/: main.yaml
roles/local_bin/tasks/: main.yaml
roles/yay/meta/: main.yaml
scripts/: .mklib  backup  change_theme  changewall  cinnamon_theme  clean_backup  close_port.sh  gen_password  group_access  listports  lock  makefile  mk  mkb  mkfreeze  mkn  mkn.py  mkr  mkt  mountsmb  open_port.sh  plotter  projects  refresh_tom_lan  scratch  socks_rlogin  socks_twhps  sort_mem.py  startmicpass  startrecord  stopmicpass  text_table  tonetd  tonm  vdev
scripts/templates/: basic.tar  build  c.tar  clib.tar  cpp.tar  cpptest.tar  cshared.tar  cstatic.tar  ctest.tar  main.cpp  makefile  makefile.test  name.cpp  py.tar  run  run.test
scripts/templates/cmakelib/: .mk  CMakeLists.txt
scripts/templates/cmakelib/lib/: lib.cpp
services/: backup.service  backup.timer  clean_backup.service
(+155 files in other folders)
